--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,24 +3,55 @@ name = "vsengine"
 version = "0.2.0+jet"
 license = { file = "COPYING" }
 readme = "README.md"
-authors = [
-    { name = "cid-chan", email ="cid+git@cid-chan.moe" }
-]
+authors = [{ name = "cid-chan", email = "cid+git@cid-chan.moe" }]
 dynamic = ["description"]
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 
-dependencies = [
-    "vapoursynth>=72"
-]
+dependencies = ["vapoursynth>=69"]
 
 [project.optional-dependencies]
-trio = [
-    "trio"
-]
-test = [
-    "pytest"
-]
+trio = ["trio"]
+test = ["pytest"]
+
+[dependency-groups]
+dev = ["mypy>=1.19.0", "ruff>=0.14.7", "trio"]
 
 [build-system]
 requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
+
+[tool.mypy]
+mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
+
+# exclude = ["stubs/vapoursynth"]
+exclude_gitignore = true
+
+# Flags changed by --strict
+warn_return_any = false
+extra_checks = false
+
+# Misc
+warn_unreachable = true
+
+allow_redefinition_new = true
+local_partial_types = true
+implicit_reexport = false
+strict = true
+
+show_column_numbers = true
+pretty = true
+color_output = true
+error_summary = true
+
+[tool.ruff]
+line-length = 120
+# extend-exclude = ["stubs/vapoursynth/__init__.pyi"]
+
+[tool.ruff.format]
+docstring-code-format = true
+
+[tool.ruff.lint]
+extend-select = ["E", "C4", "I", "PYI", "Q", "SIM", "N", "W", "RUF"]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.*" = ["F401", "F403"]
